added custom domain name